# nsthorat.github.io

./: .gitignore  .gitmodules  404.html  CLAUDE.md  CNAME  README.md  build.sh  bun.lockb  index.html  mkdocs.yml  package.json  publish.sh  pyproject.toml  serve.sh  sitemap.xml
blog/: index.html
blog/coding-agents-self-verification-loops/: index.html
blog/lessons-of-a-first-time-founder/: index.html
docs/: index.md
docs/blog/: coding-agents-self-verification-loops.md  index.md  lessons-of-a-first-time-founder.md
docs/music/: index.md
docs/stylesheets/: Gowun+Batang.css  extra.css  output.css
docs/work/: index.md
music/: index.html
search/: search_index.json
stylesheets/: extra.css
theme_overrides/: main.html
work/: index.html
