[project]
name = "blog"
version = "0.1.0"
description = "Nikhil's Blog"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nikhil Thorat"},
]
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material[imaging]>=9.5.15",
]

[project.urls]
Repository = "https://github.com/nsthorat/blog"
